--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
  install:
    commands:
-     - yarn install
+     - npm install
  build:
    commands:
-     - yarn run-script lint
+     - npm run-script lint
