specify runtime version

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ phases:
  install:
    commands:
      - npm install
+   runtime-versions:
+     - nodejs: 8  
  build:
    commands:
      - npm run-script lint
