--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "hello-world",
   "version": "1.0.0",
   "description": "",
-  "main": "handler.js",
+  "main": ".eslintrc.js",
+  "dependencies": {
+    "D": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint **/*.js"
   },
-  "repository": "git+https://github.com/xinhechen/hello-world.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xinhechen/hello-world.git"
+  },
   "keywords": [],
-  "author": "Xinhe Chen <xinhe.c@gmail.com>",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/xinhechen/hello-world/issues"
   },
-  "homepage": "https://github.com/xinhechen/hello-world#readme",
-  "dependencies": {
-    "D": "^1.0.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
-  }
+  "homepage": "https://github.com/xinhechen/hello-world#readme"
 }
